--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">Kasya</string>
     <string name="title_activity_main">Kasya</string>
-    <string name="package_name">com.moneyfest.app</string>
-    <string name="custom_url_scheme">com.moneyfest.app</string>
+    <string name="package_name">com.kasya.app</string>
+    <string name="custom_url_scheme">com.kasya.app</string>
 </resources>
